force-app/main/default/objects/Doctor__c/Doctor__c.object-meta.xml
<CustomObject>
  <!--  <externalSharingModel>ControlledByParent</externalSharingModel> -->
  

    <label>Doctor</label>
    <nameField>
        <label>Doctor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctor</pluralLabel>
 <!--   <sharingModel>ControlledByParent</sharingModel> -->
 <sharingModel>ReadWrite</sharingModel>

</CustomObject>