force-app/main/default/objects/Doctor__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Dr&apos;s address</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>