force-app/main/default/objects/Doctor__c/fields/Doctor_ID__c.field-meta.xml
<CustomField>
    <fullName>Doctor_ID__c</fullName>
    <displayFormat>D-{00000}</displayFormat>
    <label>Doctor ID</label>
    <type>AutoNumber</type>
</CustomField>