force-app/main/default/objects/Doctor__c/fields/Hospital_Id__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Id__c</fullName>
    <label>Hospital</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hospital__c.Name</field>
            <operation>startsWith</operation>
            <value>S</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hospital__c</referenceTo>
    <relationshipLabel>Doctor Dummy</relationshipLabel>
    <relationshipName>Doctor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>