force-app/main/default/objects/Doctor__c/fields/In_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Time__c</fullName>
    <description>Dr&apos;s in time</description>
    <label>In Time</label>
    <type>Time</type>
</CustomField>