force-app/main/default/objects/Doctor__c/fields/Is_HOD__c.field-meta.xml
<CustomField>
    <fullName>Is_HOD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is HOD</label>
    <type>Checkbox</type>
</CustomField>