force-app/main/default/objects/Doctor__c/fields/Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Out_Time__c</fullName>
    <description>Dr&apos;s out time</description>
    <label>Out Time</label>
    <type>Time</type>
</CustomField>