force-app/main/default/objects/Doctor__c/fields/Practice_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Practice_Start_Date__c</fullName>
    <description>Date at which Dr started the Practice</description>
    <label>Practice Start Date</label>
    <type>Date</type>
</CustomField>