force-app/main/default/objects/Doctor__c/recordTypes/Consultant_Dr_RT.recordType-meta.xml
<RecordType>
    <fullName>Consultant_Dr_RT</fullName>
    <active>true</active>
    <description>Consultant dr RT</description>
    <label>Consultant Dr RT</label>
</RecordType>