force-app/main/default/objects/Doctor__c/recordTypes/In_house_Dr_RT.recordType-meta.xml
<RecordType>
    <fullName>In_house_Dr_RT</fullName>
    <active>true</active>
    <description>in house dr rt</description>
    <label>In house Dr RT</label>
</RecordType>