force-app/main/default/objects/Doctor__c/validationRules/PHone_must_10_digtis.validationRule-meta.xml
<ValidationRule>
    <fullName>PHone_must_10_digtis</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Phone__c )  &lt;10 ||   LEN(Phone__c )  &gt;10</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please use 10 digit phone number</errorMessage>
</ValidationRule>