force-app/main/default/objects/Doctor__c/listViews/Admin_List_View.listView-meta.xml
<ListView>
    <fullName>Admin_List_View</fullName>
    <columns>NAME</columns>
    <columns>Doctor_ID__c</columns>
    <columns>Hospital_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Specialization__c</columns>
    <columns>Years_of_Experience__c</columns>
    <filterScope>Mine</filterScope>
    <label>Admin List View</label>
</ListView>