force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Specialization__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>In_Time__c</columns>
    <columns>Out_Time__c</columns>
    <columns>Is_HOD__c</columns>
    <columns>Hospital_Id__c</columns>
    <columns>Phone__c</columns>
    <columns>Practice_Start_Date__c</columns>
    <columns>Years_of_Experience__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>